--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,3 +11,4 @@ mobot = "0.3.10"
 tokio = "1.33.0"
 reqwest = {version = "0.11", features = ["blocking"]}
 scraper = "0.18"
+headless_chrome = "1.0.7"
