--- a/.github/workflows/docker_build_push.yml
+++ b/.github/workflows/docker_build_push.yml
@@ -27,13 +27,27 @@ jobs:
 
       - name: Build and push Docker image
         uses: docker/build-push-action@3b5e8027fcad23fda98b2e3ac259d8d67585f671
-        env:
-          TOKEN: ${{ secrets.TOKEN }}
-          URLS: ${{ env.URLS }}
-          KW: ${{ env.KW }}
         with:
           context: .
           file: ./Dockerfile
           push: true
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
+          build-args: |
+            TOKEN=${{ secrets.token }}
+            KW=${{ vars.KW }}
+            URLS=${{ vars.URLS }}
+  Deploy:
+    name: Deploy
+    runs-on: ubuntu-latest
+    needs: [push_to_registry]
+    steps:
+      - name: Check out the repo
+        uses: actions/checkout@v4
+      - name: Docker-Compose Remote Deployment
+        uses: alex-ac/github-action-ssh-docker-compose@master
+        with:
+          ssh_host: ${{ secrets.UBUNTU_URL_SSH }}
+          ssh_private_key: ${{ secrets.UBUNTU_SSH_PRIVATE_KEY }}
+          ssh_user: ${{ secrets.UBUNTU_SSH_USER }}
+          docker_compose_prefix: web-scraper
