--- a/.github/workflows/docker_build_push.yml
+++ b/.github/workflows/docker_build_push.yml
@@ -35,6 +35,7 @@ jobs:
           labels: ${{ steps.meta.outputs.labels }}
           build-args: |
             TOKEN=${{ secrets.PROD_TOKEN }}
+            PROD_TOKEN=${{ secrets.PROD_TOKEN }}
             KW=${{ secrets.KW }}
             URLS=${{ secrets.URLS }}
   Deploy:
