--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,9 +1,8 @@
 ---
 services:
   server:
-    image: t1mon1106/web_scraper:main
+    image: t1mon1106/web_scraper:read_file
     restart: always
     pull_policy: always
     environment:
       - RUST_LOG=info
-      - TOKEN=$PROD_TOKEN
