--- a/.github/workflows/docker_build_push.yml
+++ b/.github/workflows/docker_build_push.yml
@@ -9,6 +9,8 @@ on:
 jobs:
   push_to_registry:
     name: Push Docker image to Docker Hub
+    env:
+      TOKEN: ${{ secrets.TEST_TOKEN }}
     runs-on: ubuntu-latest
     steps:
       - name: Check out the repo
@@ -34,8 +36,8 @@ jobs:
           push: true
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
-          build-args: |
-            TOKEN=${{ secrets.TEST_TOKEN }}
+          build-args:
+            - TOKEN_VARS=$TOKEN
   Deploy:
     name: Deploy
     runs-on: ubuntu-latest
