--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,7 +1,7 @@
 ---
 services:
   server:
-    image: t1mon1106/web_scraper:read_file
+    image: t1mon1106/web_scraper:main
     restart: always
     pull_policy: always
     environment:
