--- a/.github/workflows/docker_build_push.yml
+++ b/.github/workflows/docker_build_push.yml
@@ -26,7 +26,7 @@ jobs:
           images: t1mon1106/web_scraper
 
       - name: Build and push Docker image
-        uses: docker/build-push-action@3b5e8027fcad23fda98b2e3ac259d8d67585f671
+        uses: docker/build-push-action@v5
         with:
           context: .
           file: ./Dockerfile
@@ -34,10 +34,7 @@ jobs:
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
           build-args: |
-            PROD_TOKEN=${{ secrets.PROD_TOKEN }}
-            KW=${{ secrets.KW }}
-            URLS=${{ secrets.URLS }}
-            TEST="testing"
+            "TOKEN=${{ secrets.PROD_TOKEN }}"
   Deploy:
     name: Deploy
     runs-on: ubuntu-latest
@@ -45,6 +42,11 @@ jobs:
     steps:
       - name: Check out the repo
         uses: actions/checkout@v4
+      - name: Log in to Docker Hub
+        uses: docker/login-action@f4ef78c080cd8ba55a85445d5b36e214a81df20a
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
       - name: Docker-Compose Remote Deployment
         uses: alex-ac/github-action-ssh-docker-compose@master
         with:
