add mongo support and fix some bugs, refactor ci

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,3 +17,7 @@ article_scraper = "2.0.0"
 url = "2.4.1"
 reqwest = "0.11.22"
 regex = "1.10.2"
+dotenv = "0.15.0"
+serde = "1.0.192"
+mongodb = "2.7.1"
+bson = "2.7.0"
