--- a/.github/workflows/lint_test_build_deploy.yml
+++ b/.github/workflows/lint_test_build_deploy.yml
@@ -1,14 +1,40 @@
-name: Docker
+---
+name: Test,Build,Deploy
 
-on:
-  push:
-    branches:
-      - main
+on: [push]
 
 jobs:
+  lint:
+    name: Lint
+    runs-on: ubuntu-latest
+    steps:
+      - name: Setup | Checkout
+        uses: actions/checkout@v4
+      - name: Setup | Rust
+        uses: ATiltedTree/setup-rust@v1
+        with:
+          rust-version: stable
+          components: clippy
+      - name: Build | Lint
+        run: cargo clippy
+  test:
+    name: Test
+    runs-on: ubuntu-latest
+    steps:
+      - name: Setup | Checkout
+        uses: actions/checkout@v4
+      - name: Setup | Rust
+        uses: ATiltedTree/setup-rust@v1
+        with:
+          rust-version: stable
+      - name: Build | Compile
+        run: cargo test
+
   push_to_registry:
+    if: github.event_name == 'push' && github.ref == 'refs/heads/main'
     name: Push Docker image to Docker Hub
     runs-on: ubuntu-latest
+    needs: [test]
     steps:
       - name: Check out the repo
         uses: actions/checkout@v4
@@ -35,7 +61,9 @@ jobs:
           labels: ${{ steps.meta.outputs.labels }}
           build-args: |
             "TOKEN=${{ secrets.PROD_TOKEN }}"
+            "MONGO_HOST=${{ secrets.MONGO_HOST }}"
   Deploy:
+    if: github.event_name == 'push' && github.ref == 'refs/heads/main'
     name: Deploy
     runs-on: ubuntu-latest
     needs: [push_to_registry]
