--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,3 +21,5 @@ dotenv = "0.15.0"
 serde = "1.0.192"
 mongodb = "2.7.1"
 bson = "2.7.0"
+openssl-sys = "0.9.98"
+openssl = { version = "0.10.62", features = ["vendored"] }
