--- a/.deploy/helm/Chart.yaml
+++ b/.deploy/helm/Chart.yaml
@@ -1,5 +1,5 @@
 apiVersion: v2
-name: helm
+name: web-scrapper
 description: Helm chart for scrapper telegram bot for scrapping news from internet
 
 type: application
@@ -7,8 +7,3 @@ type: application
 version: 0.1.0
 
 appVersion: "0.1.0"
-
-dependencies:
-  - name: mongodb
-    version: 7.8.10
-    repository: https://charts.helm.sh/stable
