--- a/.deploy/helm/values.yaml
+++ b/.deploy/helm/values.yaml
@@ -2,7 +2,7 @@ replicaCount: 1
 
 image:
   repository: t1mon1106/web_scraper
-  pullPolicy: IfNotPresent
+  pullPolicy: Always
   # Overrides the image tag whose default is the chart appVersion.
   tag: kuber
 
