--- a/.github/workflows/lint_test_build_deploy.yml
+++ b/.github/workflows/lint_test_build_deploy.yml
@@ -1,11 +1,11 @@
 ---
-name: Test,Build,Deploy
+name: Test,Build
 
 on: [push]
 
 jobs:
-  lint:
-    name: Lint
+  test:
+    name: test
     runs-on: ubuntu-latest
     steps:
       - name: Setup | Checkout
@@ -16,29 +16,21 @@ jobs:
           rust-version: stable
           components: clippy
       - name: Build | Lint
-        run: cargo clippy
-  test:
-    name: Test
-    runs-on: ubuntu-latest
-    steps:
-      - name: Setup | Checkout
-        uses: actions/checkout@v4
-      - name: Setup | Rust
-        uses: ATiltedTree/setup-rust@v1
-        with:
-          rust-version: stable
-      - name: Build | Compile
-        run: cargo test
+        run: |
+          cargo clippy
+          cargo test
 
   push_to_registry:
-    if: github.event_name == 'push' && github.ref == 'refs/heads/main'
     name: Push Docker image to Docker Hub
-    runs-on: ubuntu-latest
+    runs-on: self-hosted
     needs: [test]
     steps:
       - name: Check out the repo
         uses: actions/checkout@v4
-
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v3
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
       - name: Log in to Docker Hub
         uses: docker/login-action@f4ef78c080cd8ba55a85445d5b36e214a81df20a
         with:
@@ -59,26 +51,3 @@ jobs:
           push: true
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
-          build-args: |
-            "TOKEN=${{ secrets.PROD_TOKEN }}"
-            "MONGO_HOST=${{ secrets.MONGO_HOST }}"
-  Deploy:
-    if: github.event_name == 'push' && github.ref == 'refs/heads/main'
-    name: Deploy
-    runs-on: ubuntu-latest
-    needs: [push_to_registry]
-    steps:
-      - name: Check out the repo
-        uses: actions/checkout@v4
-      - name: Log in to Docker Hub
-        uses: docker/login-action@f4ef78c080cd8ba55a85445d5b36e214a81df20a
-        with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
-      - name: Docker-Compose Remote Deployment
-        uses: alex-ac/github-action-ssh-docker-compose@master
-        with:
-          ssh_host: ${{ secrets.UBUNTU_URL_SSH }}
-          ssh_private_key: ${{ secrets.UBUNTU_SSH_PRIVATE_KEY }}
-          ssh_user: ${{ secrets.UBUNTU_SSH_USER }}
-          docker_compose_prefix: web_scraper
