--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -2,8 +2,9 @@ name: Release Charts
 
 on:
   push:
-    # branches:
-    # - main
+    branches:
+      - main
+
 env:
   GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
 
