--- a/.github/workflows/lint_test_build_deploy.yml
+++ b/.github/workflows/lint_test_build_deploy.yml
@@ -1,7 +1,9 @@
 ---
 name: Test,Build
 
-on: [push]
+on:
+  - push
+  - workflow_dispatch
 
 jobs:
   test:
@@ -11,7 +13,7 @@ jobs:
       - name: Setup | Checkout
         uses: actions/checkout@v4
       - name: Setup | Rust
-        uses: ATiltedTree/setup-rust@v1
+        uses: actions-rust-lang/setup-rust-toolchain@v1
         with:
           rust-version: stable
           components: clippy
